@@ -1,7 +1,15 @@
 0.07 2022-09-27
   [Test Improvement]
-    * Add the test of the exit method in the Sys::Process class on Windows.
-    * Add the test of the execv method in the Sys::Process class on Windows.
+    * Added the test of the exit method in the Sys::Process class on Windows.
+    * Added the test of the execv method in the Sys::Process class on Windows.
+  [Bug Fix]
+    * Fixed the bug that the set_sin_family method in the Sys::Socket::Sockaddr::In didn't receive the argument.
+      The definition was changed.
+    [Before]
+      method set_sin_family : void ();
+    [After]
+      method set_sin_family : void ($family : byte);
+
   [Test Fix]
     * Fix the test of the times method in the Sys::Process class.
 0.06 2022-09-27
